CultiBox (1.1.0) precise; urgency=low
   + Modification des couleurs des graphes (passage en hexa)
        02_src/joomla/main/scripts/logs.php
        02_src/joomla/main/libs/config.php
   + Mise en place d'un bouton précédent/suivant dans les logs pour rapidement changer la date
        02_src/joomla/main/libs/utilfunc.php
        02_src/joomla/main/libs/css/cultibox.css
        02_src/joomla/main/templates/logs.html
        02_src/joomla/main/templates/configuration.html
        02_src/joomla/main/templates/cost.html
        02_src/joomla/main/templates/wizard.html
        02_src/joomla/main/locale/fr_FR.utf8.po
        02_src/joomla/main/locale/en_GB.utf8.po

   + Utilisation du HP/HC dans le calcul reel de la consommation + correction du cout du prix theorique
        02_src/joomla/main/scripts/cost.php
        02_src/joomla/main/libs/db_common.php

   + Correction de l'afficahge des puissances consommée suite au changement sur 4 digit des fichiers pwr_XX
        02_src/joomla/main/libs/db_common.php
        02_src/joomla/main/templates/logs.html

   + Pas de waiting s'il n'y a pas de carte SD
        02_src/joomla/main/locale/en_GB.utf8.po
        02_src/joomla/main/locale/fr_FR.utf8.po
        02_src/joomla/main/scripts/waiting.php
        02_src/joomla/main/templates/waiting.html

   + Utilisation de variables globales pour le min/max de prises utilisables
        02_src/joomla/main/scripts/programs.php
        02_src/joomla/main/libs/config.php
        02_src/joomla/main/templates/programs.html
        02_src/joomla/main/templates/configuration.html
        02_src/joomla/main/locale/en_GB.utf8.po
        02_src/joomla/main/locale/fr_FR.utf8.po

   + Utilisation des HP/HC pour le calcul des coûts de l'installation
        02_src/joomla/main/scripts/cost.php
        02_src/joomla/main/libs/db_common.php
        02_src/joomla/main/libs/utilfunc.php

   + Possiilité d'afficher la calcul du coût pour toutes les prises séparément